# UniversityLabsOpenMPI

lab1/: AbstractTask.h  CMakeLists.txt  Constants.h  MasterTask.cpp  MasterTask.h  StringUtils.cpp  StringUtils.h  TaskRunner.cpp  TaskRunner.h  WorkerTask.cpp  WorkerTask.h  main.cpp  output.example.txt
